# admin-suite

./: DEVELOPING.md  README.md  _probe_hf.py  commit-msg.txt  cron-prompt-oneline.txt  index.html  package-lock.json  package.json  poll-release.py  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  llm-conversation-design.md  llm-design.md  release-process.md
docs/plans/: v0.7.0-chat-history.md
examples/: locale-ja-JP.json  theme-sunset.json
scripts/: audit-i18n.py  check-workflow.cjs  gen-icons.py  gen-v8-locale-refresh.py  gen-zh-tw.py  trigger-release.ps1
src/: App.vue  globals.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: V10__seed_llm.sql  V11__seed_ai_settings.sql  V12__add_chat_history.sql  V13__admin_llm_perms.sql  V1__init_schema.sql  V2__seed_acl.sql  V3__seed_tools.sql  V4__seed_tools_more.sql  V5__add_menu_title_key.sql  V6__seed_string_crypto.sql  V7__seed_app_state.sql  V8__refresh_builtin_locales.sql  V9__seed_monitoring_diagnostics_updater.sql
src-tauri/src/: crypto.rs  error.rs  lib.rs  main.rs
src-tauri/src/auth/: mod.rs  password.rs  rbac.rs  session.rs
src-tauri/src/commands/: audit.rs  auth.rs  backup.rs  chat_history.rs  crash.rs  llm.rs  llm_fallback.rs  menus.rs  metrics.rs  migrate_cmd.rs  mod.rs  permissions.rs  resources.rs  roles.rs  settings.rs  updater.rs  users.rs
src-tauri/src/commands/llm_fallback/: events.rs  install.rs  mod.rs  provider.rs  reroute.rs  server.rs  speed_test.rs
src-tauri/src/db/: migrate.rs  mod.rs
src-tauri/src/llm/: fallback.rs  mod.rs
src-tauri/src/llm/fallback/: README.md  download.rs  multi_download.rs  registry.rs
src-tauri/src/llm/providers/: anthropic.rs  custom.rs  fallback.rs  google.rs  mod.rs  openai_compat.rs
src-tauri/src/models/: audit.rs  menu.rs  mod.rs  permission.rs  resource.rs  role.rs  user.rs
src/api/: audit.ts  auth.ts  backups.ts  chat-history.ts  crash.ts  index.ts  llm.ts  metrics.ts  resources.ts  roles.ts  settings.ts  updater.ts  users.ts
src/components/: Breadcrumb.vue  CommandPalette.vue  HeaderBar.vue  LanguageSwitcher.vue  PinButton.vue  RecentDrawer.vue  Sidebar.vue  SidebarItem.vue  ThemeSwitcher.vue  sidebar-utils.ts
src/composables/: useToolRecorder.ts
src/i18n/: index.ts
src/layouts/: DefaultLayout.vue
src/router/: index.ts
src/stores/: auth.ts  chat-history.ts  crash.ts  llm.ts  locale.ts  menu.ts  metrics.ts  palette.ts  recent.ts  theme.ts  updater.ts
src/styles/: index.scss
src/themes/: index.ts
src/views/: Dashboard.vue  Login.vue  NotFound.vue
test/: setup.ts
(+38 files in other folders)
